Adding ESLint, removing SSR.

--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:circunomics-coding-challenge": "node dist/circunomics-coding-challenge/server/server.mjs"
+    "lint": "ng lint"
   },
   "prettier": {
     "printWidth": 100,
@@ -42,8 +41,11 @@
     "@angular/compiler-cli": "^21.0.0",
     "@types/express": "^5.0.1",
     "@types/node": "^20.17.19",
+    "angular-eslint": "21.0.1",
+    "eslint": "^9.39.1",
     "jsdom": "^27.1.0",
     "typescript": "~5.9.2",
+    "typescript-eslint": "8.46.4",
     "vitest": "^4.0.8"
   }
 }
