--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@angular/compiler-cli": "^21.0.0",
     "@types/express": "^5.0.1",
     "@types/node": "^20.17.19",
-    "@vitest/coverage-v8": "^4.0.8",
+    "@vitest/coverage-istanbul": "^4.0.8",
     "angular-eslint": "21.0.1",
     "eslint": "^9.39.1",
     "jsdom": "^27.1.0",
