Update Jekyll workflow for Angular app build
Added 404 fallback for Angular routing and updated base href.

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -31,7 +31,10 @@ jobs:
         run: npm ci
 
       - name: Build Angular app
-        run: npm run build -- --configuration production
+        run: npm run build -- --configuration production --base-href "/circunomics-coding-challenge/"
+
+      - name: Add 404 fallback for Angular routing
+        run: cp dist/circunomics-coding-challenge/index.html dist/circunomics-coding-challenge/404.html
 
       - name: Upload artifact for Pages
         uses: actions/upload-pages-artifact@v3
