--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -16,7 +16,7 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -33,17 +33,17 @@ jobs:
       - name: Build Angular app
         run: npm run build -- --configuration production --base-href "/circunomics-coding-challenge/"
 
-      - name: Add 404 fallback for Angular routing
-        run: cp dist/circunomics-coding-challenge/circunomics-coding-challenge/index.html dist/circunomics-coding-challenge/circunomics-coding-challenge/404.html
+      - name: Add 404 fallback
+        run: cp dist/circunomics-coding-challenge/index.html dist/circunomics-coding-challenge/404.html
 
       - name: Upload artifact for Pages
         uses: actions/upload-pages-artifact@v3
         with:
-          path: dist/circunomics-coding-challenge/circunomics-coding-challenge
+          path: dist/circunomics-coding-challenge
 
   deploy:
+    needs: build-and-deploy
     runs-on: ubuntu-latest
-    needs: build
     steps:
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
